MinHeap with linked list is done.